chore: :zap: integrate new schema changes & update documentation
